# forecast-26

./: .gitignore  api.py  main.py  package-lock.json  package.json  pyproject.toml  seguir.txt
.kiro/specs/csv-import-forecast/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: naming-conventions.md
docs/: guia-proteccion-api-keys.md
evolved-ephemera/: package.json
frontend/: package-lock.json  package.json
frontend/.astro/: settings.json
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
