[project]
name = "forecaster"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12, <3.13"
dependencies = [
    "pandas>=2.0,<3.0",
    "numpy",
    "openpyxl",
    "neuralprophet",
    "fastapi",
    "uvicorn",
    "python-multipart",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "httpx>=0.27",
    "openpyxl>=3.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
